# vega-nexus

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  PRIVACY.md  README.md  SECURITY.md  pyproject.toml
.github/ISSUE_TEMPLATE/: config.yml  feature_request.md
docs/: routing-policy.md
examples/: routing-config.json  routing-config.yaml
examples/tasks/: refactor.md
scripts/: verify.py
src/vega_nexus/: cli.py
tests/: test_cli.py
