[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "vega-nexus"
version = "0.1.0"
description = "Multi-model orchestration router for local-first AI workflows."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Vega-Starboard" }]
dependencies = []

[project.scripts]
vega-nexus = "vega_nexus.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
